Gap fix

--- a/home_page.css
+++ b/home_page.css
@@ -250,11 +250,6 @@ body{
 
 
 /* page 3 start */
-
-
-
-
-
 sale-section {
   text-align: center;
   padding: 50px 0;
@@ -289,7 +284,7 @@ sale-section {
 
 .product img {
   width: 250px;
-  height: 300px;
+  height: 200px;
   object-fit: cover;
   background: #111;
 }
@@ -314,7 +309,14 @@ sale-section {
 .new-price {
   font-weight: bold;
 }
-
+.product{
+  transition: all 0.3s ease;
+}
+.product:hover{
+  height: 400px;
+  width: 300px;
+  box-shadow: 0 5px 5px black;
+}
 
 
 
@@ -355,8 +357,8 @@ sale-section {
     margin-top: 50px;
 }
 #contact{
-    top:100px
-    height: 4000px;
+    top:100px;
+    height: 110px;
     text-align: center;
     font-size: 64px;
     font-weight: 600;
@@ -389,7 +391,7 @@ body {
   width: 100%;
   margin: 0 auto 60px;
 }
-/
+
 .contact-form {
   max-width: 720px;  
   margin: 0 auto;
@@ -506,16 +508,11 @@ body {
   gap: 8px;
   font-size: 14px;
   color: #666;
-  font-weight: 300;
+  font-weight: 299;
 }
 
 .checkbox input[type="checkbox"] {
   width: 16px;
   height: 16px;
 }
-
-@media (max-width: 760px) {
-  .row.two-cols { grid-template-columns: 1fr; }
-  .form-actions { justify-content: center; } /* center on small screens */
-  .subscribe-row { flex-direction: column; align-items: flex-start; }
 }
